refactor(blockchain): 使用ChainOperationStream替换ChainOperationLog并优化幂等控制
- 替换AbstractChainService中ChainOperationLog为ChainOperationStream
- 优化doPostExecute方法中幂等处理逻辑和响应构造
- 异步操作中查询及消息发送参数对应调整为ChainOperationStream
- 调整user模块，删除用户链账户实体及相关接口实现
- Nexo-Client新增未登录重定向和加载状态，改进用户信息合并策略
- Nexo-Admin调整获取当前用户信息接口，兼容多响应格式及默认昵称头像
- 删除ArtWorkESServiceImpl实现，改为使用NFT相关命名和接口
- 调整common-api中藏品相关类命名及类型，统一使用NFT相关命名
- 业务层AssetServiceImpl改为调用NFTService替代ArtWorkService
- 优化auth及admin模块，实现手机号验证码登录，删除AdminService及相关接口
- 调整gateway配置，新增auth路由StripPrefix及Sentinel配置
- 优化多个界面未登录时的跳转体验及加载状态展示
- 删除废弃代码和接口，统一接口命名及请求响应规范